--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink:        pretty
 # Setup
 title:            Brooke Ballagh
 tagline:          'A Collection of my Journalism Work'
-description:      I am a student at the University of Iowa studying Journalism & Mass Communication with the goal of becoming a Television News Broadcast Producer.
+description:      A journalism student at the University of Iowa with the goal of becoming a Television News Broadcast Producer.
 url:              http://bballagh.github.io
 baseurl:          /profile-hyde/
 shortbaseurl:     /profile-hyde
