--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:        pretty
 
 # Setup
 title:            Brooke Ballagh
-tagline:          'A Collection of my Journalism Work'
+tagline:          'A Collection of My Journalism Work'
 description:      A journalism student at the University of Iowa with the goal of becoming a Television News Broadcast Producer.
 url:              http://bballagh.github.io
 baseurl:          /profile-hyde/
